[11-17-23] made changes to make it current -updated portfilio images and links -updated verbiage -added resume -remove reference to js fxn so portfolio opens projects not images

--- a/css/creative.css
+++ b/css/creative.css
@@ -2262,12 +2262,12 @@ fieldset:disabled a.btn {
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #f24516;
-  border-color: #ee3e0d;
+  background-color: rgb(70, 92, 67);
+  border-color: #136207;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(246, 122, 88, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(88, 246, 96, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
@@ -2279,8 +2279,8 @@ fieldset:disabled a.btn {
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ee3e0d;
-  border-color: #e23a0d;
+  background-color: #136207;
+  border-color: #153510;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
@@ -4718,7 +4718,7 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #ee3e0d;
+  background-color: #136207;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
@@ -6211,7 +6211,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #ee3e0d !important;
+  background-color: #136207 !important;
 }
 
 .bg-secondary {
