--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,7 +4,7 @@
 
 // Set a custom color
 $orange: #248143 !default;
-$brown: #5c4d42 !default;
+$brown: #136207 !default;
 
 // Set primary color to orange
 $primary: $orange !default;
